[common] UrlUtils, backwards compatibility revert (until min sdk 33)